# pyweather

./: .gitignore  README.md  app.py  pyproject.toml
src/: config.json
src/api/: __init__.py  api_utils.py  client.py  endpoints.py  models.py
src/core/: main.py  style.tcss
src/utils/: helpers.py
